--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             <button type="button" class="c-action-trigger c-glyph glyph-global-nav-button" aria-label="All Microsoft expand to see list of Microsoft products and services" initialstate-label="All Microsoft expand to see list of Microsoft products and services" togglestate-label="Close All Microsoft list" aria-expanded="false" data-m="{" cn":"mobile="" menu="" button_nonnav","id":"nn1c4c1m1r1a1","sn":1,"an":"c4c1m1r1a1"}"=""></button>
             <button type="button" class="c-action-trigger c-glyph glyph-arrow-htmllegacy c-close-search" aria-label="Close search" aria-expanded="false" data-m="{" cn":"close="" search_nonnav","id":"nn2c4c1m1r1a1","sn":2,"an":"c4c1m1r1a1"}"=""></button>
                     <a id="uhfLogo" class="c-logo c-sgl-stk-uhfLogo" itemprop="url" href="https://www.microsoft.com" aria-label="Microsoft" data-m="{" cn":"globalnav_logo_cont","ct":"container","id":"c3c4c1m1r1a1","sn":3,"an":"c4c1m1r1a1"}"="">
-                        <img alt="" itemprop="logo" class="c-image" src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Mu3b?ver=5c31" role="presentation" aria-hidden="true">
+                        <img alt="" itemprop="logo" class="c-image" src="https://raw.githubusercontent.com/imthirutj/timesmed-MS/main/images/logo.png" role="presentation" aria-hidden="true">
                         <span itemprop="name" role="presentation" aria-hidden="true">Microsoft</span>
                     </a>
             <div class="f-mobile-title">
