--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <link rel="SHORTCUT ICON" href="favicon.ico" type="image/x-icon">
+    <link rel="SHORTCUT ICON" href="https://raw.githubusercontent.com/imthirutj/timesmed-MS/main/images/logo.png" type="image/x-icon">
 
     
 
