--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
             <h2 class="c-uhf-sronly">Global</h2>
             <ul class="c-w0">
         <li class="js-nav-menu single-link" data-m="{" cn":"m365_cont","ct":"container","id":"c1c2c1c7c4c1m1r1a1","sn":1,"an":"c2c1c7c4c1m1r1a1"}"="">
-            <a id="shellmenu_0-mo" class="js-subm-uhf-nav-link" href="https://www.microsoft.com/en-in/microsoft-365" data-m="{" cn":"w0nav_m365_nav","id":"n1c1c2c1c7c4c1m1r1a1","sn":1,"an":"c1c2c1c7c4c1m1r1a1"}"="">Microsoft 365</a>
+            <a id="shellmenu_0-mo" class="js-subm-uhf-nav-link" href="https://www.nhm.tn.gov.in/en/about-nhm-tn/history-of-nhm" data-m="{" cn":"w0nav_m365_nav","id":"n1c1c2c1c7c4c1m1r1a1","sn":1,"an":"c1c2c1c7c4c1m1r1a1"}"="">About NHM TN</a>
             
         </li>
         <li class="js-nav-menu single-link" data-m="{" cn":"teams_cont","ct":"container","id":"c2c2c1c7c4c1m1r1a1","sn":2,"an":"c2c1c7c4c1m1r1a1"}"="">
