--- a/index.html
+++ b/index.html
@@ -453,25 +453,25 @@
                     <nav id="uhf-g-nav" aria-label="Contextual menu" class="c-uhfh-gnav" data-m="{" cn":"category="" nav_cont","ct":"container","id":"c6c4c1m1r1a1","sn":6,"an":"c4c1m1r1a1"}"="">
             <ul class="js-paddle-items">
                                         <li class="single-link js-nav-menu uhf-menu-item">
-                            <a id="shellmenu_0" class="c-uhf-nav-link" href="https://www.microsoft.com/en-in/microsoft-365" data-m="{" cn":"catnav_m365_nav","id":"n1c6c4c1m1r1a1","sn":1,"an":"c6c4c1m1r1a1"}"="">Microsoft 365</a>
+                            <a id="shellmenu_0" class="c-uhf-nav-link" href="#">Microsoft 365</a>
                         </li>
                         <li class="single-link js-nav-menu uhf-menu-item">
-                            <a id="l0_Teams" class="c-uhf-nav-link" href="https://www.microsoft.com/en-in/microsoft-teams/group-chat-software" data-m="{" cn":"catnav_teams_nav","id":"n2c6c4c1m1r1a1","sn":2,"an":"c6c4c1m1r1a1"}"="">Teams</a>
+                            <a id="l0_Teams" class="c-uhf-nav-link" href="#">Teams</a>
                         </li>
                         <li class="single-link js-nav-menu uhf-menu-item">
-                            <a id="shellmenu_2" class="c-uhf-nav-link" href="https://copilot.microsoft.com/" data-m="{" cn":"catnav_copilot_nav","id":"n3c6c4c1m1r1a1","sn":3,"an":"c6c4c1m1r1a1"}"="">Copilot</a>
+                            <a id="shellmenu_2" class="c-uhf-nav-link" href="#">Copilot</a>
                         </li>
                         <li class="single-link js-nav-menu uhf-menu-item">
-                            <a id="shellmenu_3" class="c-uhf-nav-link" href="https://www.microsoft.com/en-in/windows/" data-m="{" cn":"catnav_windows_nav","id":"n4c6c4c1m1r1a1","sn":4,"an":"c6c4c1m1r1a1"}"="">Windows</a>
+                            <a id="shellmenu_3" class="c-uhf-nav-link"#">Windows</a>
                         </li>
                         <li class="single-link js-nav-menu uhf-menu-item">
-                            <a id="shellmenu_4" class="c-uhf-nav-link" href="https://www.microsoft.com/surface" data-m="{" cn":"catnav_surface_nav","id":"n5c6c4c1m1r1a1","sn":5,"an":"c6c4c1m1r1a1"}"="">Surface</a>
+                            <a id="shellmenu_4" class="c-uhf-nav-link" href="#">Surface</a>
                         </li>
                         <li class="single-link js-nav-menu uhf-menu-item">
-                            <a id="shellmenu_5" class="c-uhf-nav-link" href="https://www.xbox.com/" data-m="{" cn":"catnav_xbox_nav","id":"n6c6c4c1m1r1a1","sn":6,"an":"c6c4c1m1r1a1"}"="">Xbox</a>
+                            <a id="shellmenu_5" class="c-uhf-nav-link" href="#">Xbox</a>
                         </li>
                         <li class="single-link js-nav-menu uhf-menu-item">
-                            <a id="l1_support" class="c-uhf-nav-link" href="https://support.microsoft.com/en-in" data-m="{" cn":"catnav_support_nav","id":"n7c6c4c1m1r1a1","sn":7,"an":"c6c4c1m1r1a1"}"="">Support</a>
+                            <a id="l1_support" class="c-uhf-nav-link" href="#">Support</a>
                         </li>
 
 
