--- a/index.html
+++ b/index.html
@@ -453,25 +453,25 @@
                     <nav id="uhf-g-nav" aria-label="Contextual menu" class="c-uhfh-gnav" data-m="{" cn":"category="" nav_cont","ct":"container","id":"c6c4c1m1r1a1","sn":6,"an":"c4c1m1r1a1"}"="">
             <ul class="js-paddle-items">
                                         <li class="single-link js-nav-menu uhf-menu-item">
-                            <a id="shellmenu_0" class="c-uhf-nav-link" href="#">Microsoft 365</a>
+                            <a id="shellmenu_0" class="c-uhf-nav-link" href="#">About NHM TN</a>
                         </li>
                         <li class="single-link js-nav-menu uhf-menu-item">
-                            <a id="l0_Teams" class="c-uhf-nav-link" href="#">Teams</a>
+                            <a id="l0_Teams" class="c-uhf-nav-link" href="#">NHM Programs</a>
                         </li>
                         <li class="single-link js-nav-menu uhf-menu-item">
-                            <a id="shellmenu_2" class="c-uhf-nav-link" href="#">Copilot</a>
+                            <a id="shellmenu_2" class="c-uhf-nav-link" href="#">Innovations</a>
                         </li>
                         <li class="single-link js-nav-menu uhf-menu-item">
-                            <a id="shellmenu_3" class="c-uhf-nav-link"#">Windows</a>
+                            <a id="shellmenu_3" class="c-uhf-nav-link"#">Gallery</a>
                         </li>
                         <li class="single-link js-nav-menu uhf-menu-item">
-                            <a id="shellmenu_4" class="c-uhf-nav-link" href="#">Surface</a>
+                            <a id="shellmenu_4" class="c-uhf-nav-link" href="#">Downloads</a>
                         </li>
                         <li class="single-link js-nav-menu uhf-menu-item">
-                            <a id="shellmenu_5" class="c-uhf-nav-link" href="#">Xbox</a>
+                            <a id="shellmenu_5" class="c-uhf-nav-link" href="#">RTI Information</a>
                         </li>
                         <li class="single-link js-nav-menu uhf-menu-item">
-                            <a id="l1_support" class="c-uhf-nav-link" href="#">Support</a>
+                            <a id="l1_support" class="c-uhf-nav-link" href="#">Contact Us</a>
                         </li>
 
 
